2000-11-25  Dancer Vesperman <dancer@users.sourceforge.net>
	* audio/Audio.cc: Remove some cruft that used to support the ring-buffers. Should prevent occasional SDL breakage.

2000-11-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* utils.cc: fixed allocation bugs in get_system_path()

2000-11-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* game.cc: wait_delay() now handles all waiting events, instead of just one

2000-11-24  Dancer Vesperman <dancer@users.sourceforge.net>
	* audio/Audio.cc: Remove a redundant assignment

2000-11-24  Dancer Vesperman <dancer@users.sourceforge.net>
	* Adjust the initial window size for ProducerConsumerBufs

2000-11-24  Dancer Vesperman <dancer@users.sourceforge.net>
	* GLOBAL: Eliminate the global audio pointer.
	* Complete conversion of audio subsystem to self-initialising, self-managing singleton object
	* Update all audio references.
	* Change mixer and midi subsystem construction/destruction.
	* Remove default initialiser code for Audio
	* Allow multiple variant initialisation for Audio subsystem
	* Base calculations on actual values adopted by the SDL/hardware layer
	* Actors.cc: wtype initialised to other, in case no value is assigned.
	* files/utils.cc: Eliminate use of malloc/free/strdup
	* files/utils.cc: const police.
	* All speech now plays via audio streams
	* Ring buffers obsolete. Remove them

2000-11-24  Dancer Vesperman <dancer@users.sourceforge.net>
	* files/utils.h: Make the hash function inlineable

2000-11-23  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Don't dup. text when an item is clicked on.
	* gamewin.cc: NPC's with 'wait' schedule avoid clocked schedule
	changes, so waiting companions won't walk away.

2000-11-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* paths.h: fixed pathfinding on BeOS.

2000-11-23  Tristan Tarrant <nadir@users.sourceforge.net>

	* browser.cc: show shape name
	* configure.in: added --enable-optimized-debug
